--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<version>3.3.2.GA</version>
 			<type>pom</type>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate</artifactId>
+    <version>3.2.6.ga</version>
+</dependency>
 
 
 
