--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ logging.level.org.springframework=INFO
 spring.profiles.active=production
 
 server.port=${PORT:5000}
+spring.datasource.driverclassname = org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
